--- a/css/added.css
+++ b/css/added.css
@@ -118,7 +118,7 @@
     color:white;
 }
 .badgebg {
-    background-image: url("../Img/BADGE.png");
+    background-image: url("../img/BADGE.png");
 }
 .textwhite {
     color:white;
